# sabana_club_backend

./: Cargo.toml  Dockerfile  fly.toml
src/: auth_middleware.rs  global_traits.rs  main.rs
src/api_server/: mod.rs
src/requests_service/: domain.rs  endpoints.rs  err.rs  mod.rs  usecases.rs
src/requests_service/repository/: err.rs  lib_sql_implementation.rs  mod.rs
src/tournament_service/: domain.rs  endpoints.rs  err.rs  mod.rs  use_cases.rs
src/tournament_service/repository/: err.rs  lib_sql_implementation.rs  mod.rs
src/trainings_service/: endpoints.rs  err.rs  mod.rs  model.rs  use_cases.rs
src/trainings_service/repository/: err.rs  lib_sql_implementation.rs  mod.rs
src/tuition_service/: domain.rs  endpoints.rs  err.rs  mod.rs  use_cases.rs
src/tuition_service/repository/: err.rs  lib_sql_implementation.rs  mod.rs
src/unique_identifier_service/: endpoints.rs  mod.rs  usecases.rs
src/unique_identifier_service/repository/: err.rs  lib_sql_implementation.rs  mod.rs
src/user_service/: domain.rs  endpoints.rs  err.rs  mod.rs  token_provider.rs  unique_identifier.rs  use_cases.rs
src/user_service/repository/: err.rs  libsql_implementation.rs  mod.rs
