[package]
name = "sabana_club_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
envy = "0.4.2"
libsql = "0.6.0"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
