[package]
name = "sabana_club_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
bcrypt = "0.16.0"
chrono = "0.4.39"
dotenvy = "0.15.7"
envy = "0.4.2"
jsonwebtoken = "9.3.0"
libsql = "0.6.0"
mockall = "0.13.1"
serde = "1.0.217"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
trait-variant = "0.1.2"
uuid = { version = "1.12.1", features = ["v4"] }
